target/main/mp/parser/MPParser.py
# Generated from main/mp/parser/MP.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class MPParser ( Parser ):

    grammarFileName = "MP.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'+'", "'-'", "'*'", "'/'", "'='", "'<>'", "'<'", "'>'", 
                     "'<='", "'>='", "':='", "'['", "']'", "':'", "'('", 
                     "')'", "';'", "'..'", "','" ]

    symbolicNames = [ "<INVALID>", "LCMT", "BCMT1", "BCMT2", "BREAK", "CONTINUE", 
                      "FOR", "WHILE", "TO", "DOWNTO", "WITH", "DO", "IF", 
                      "THEN", "ELSE", "VAR", "OF", "BEGIN", "END", "RETURN", 
                      "FUNCTION", "PROCEDURE", "ARRAY", "REAL", "BOOLEAN", 
                      "INTEGER", "STRING", "NOT", "AND", "OR", "DIV", "MOD", 
                      "ADD", "SUB", "MUL", "DIV_F", "EQUAL", "NOTEQUAL", 
                      "LESSTHAN", "GREATERTHAN", "LESSEQUAL", "GREATEREQUAL", 
                      "ASSIGN", "LSB", "RSB", "COLON", "LB", "RB", "SEMI", 
                      "DDOT", "COMMA", "INTLIT", "REALIT", "BOOLIT", "TRUE", 
                      "FALSE", "UNCLOSE_STRING", "ILLEGAL_ESCAPE", "STRLIT", 
                      "IDENTIFIER", "WS", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_declaration = 1
    RULE_varDecl = 2
    RULE_listDecls = 3
    RULE_funcDecl = 4
    RULE_listParams = 5
    RULE_params = 6
    RULE_proDecl = 7
    RULE_literal = 8
    RULE_types = 9
    RULE_primtype = 10
    RULE_compoundtype = 11
    RULE_arrtype = 12
    RULE_lower = 13
    RULE_upper = 14
    RULE_operand = 15
    RULE_exp = 16
    RULE_exp1 = 17
    RULE_exp2 = 18
    RULE_exp3 = 19
    RULE_exp4 = 20
    RULE_exp5 = 21
    RULE_exp6 = 22
    RULE_arrelement = 23
    RULE_funcall = 24
    RULE_stmt = 25
    RULE_assignstmt = 26
    RULE_lhs = 27
    RULE_ifstmt = 28
    RULE_whilestmt = 29
    RULE_forstmt = 30
    RULE_breakstmt = 31
    RULE_continuestmt = 32
    RULE_returnstmt = 33
    RULE_compoundstmt = 34
    RULE_withstmt = 35
    RULE_callstmt = 36

    ruleNames =  [ "program", "declaration", "varDecl", "listDecls", "funcDecl", 
                   "listParams", "params", "proDecl", "literal", "types", 
                   "primtype", "compoundtype", "arrtype", "lower", "upper", 
                   "operand", "exp", "exp1", "exp2", "exp3", "exp4", "exp5", 
                   "exp6", "arrelement", "funcall", "stmt", "assignstmt", 
                   "lhs", "ifstmt", "whilestmt", "forstmt", "breakstmt", 
                   "continuestmt", "returnstmt", "compoundstmt", "withstmt", 
                   "callstmt" ]

    EOF = Token.EOF
    LCMT=1
    BCMT1=2
    BCMT2=3
    BREAK=4
    CONTINUE=5
    FOR=6
    WHILE=7
    TO=8
    DOWNTO=9
    WITH=10
    DO=11
    IF=12
    THEN=13
    ELSE=14
    VAR=15
    OF=16
    BEGIN=17
    END=18
    RETURN=19
    FUNCTION=20
    PROCEDURE=21
    ARRAY=22
    REAL=23
    BOOLEAN=24
    INTEGER=25
    STRING=26
    NOT=27
    AND=28
    OR=29
    DIV=30
    MOD=31
    ADD=32
    SUB=33
    MUL=34
    DIV_F=35
    EQUAL=36
    NOTEQUAL=37
    LESSTHAN=38
    GREATERTHAN=39
    LESSEQUAL=40
    GREATEREQUAL=41
    ASSIGN=42
    LSB=43
    RSB=44
    COLON=45
    LB=46
    RB=47
    SEMI=48
    DDOT=49
    COMMA=50
    INTLIT=51
    REALIT=52
    BOOLIT=53
    TRUE=54
    FALSE=55
    UNCLOSE_STRING=56
    ILLEGAL_ESCAPE=57
    STRLIT=58
    IDENTIFIER=59
    WS=60
    ERROR_CHAR=61

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MPParser.EOF, 0)

        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(MPParser.DeclarationContext,i)


        def getRuleIndex(self):
            return MPParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MPParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 74
                self.declaration()
                self.state = 77 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MPParser.VAR) | (1 << MPParser.FUNCTION) | (1 << MPParser.PROCEDURE))) != 0)):
                    break

            self.state = 79
            self.match(MPParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varDecl(self):
            return self.getTypedRuleContext(MPParser.VarDeclContext,0)


        def funcDecl(self):
            return self.getTypedRuleContext(MPParser.FuncDeclContext,0)


        def proDecl(self):
            return self.getTypedRuleContext(MPParser.ProDeclContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_declaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaration" ):
                return visitor.visitDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def declaration(self):

        localctx = MPParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declaration)
        try:
            self.state = 84
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MPParser.VAR]:
                self.enterOuterAlt(localctx, 1)
                self.state = 81
                self.varDecl()
                pass
            elif token in [MPParser.FUNCTION]:
                self.enterOuterAlt(localctx, 2)
                self.state = 82
                self.funcDecl()
                pass
            elif token in [MPParser.PROCEDURE]:
                self.enterOuterAlt(localctx, 3)
                self.state = 83
                self.proDecl()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VarDeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(MPParser.VAR, 0)

        def listDecls(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.ListDeclsContext)
            else:
                return self.getTypedRuleContext(MPParser.ListDeclsContext,i)


        def getRuleIndex(self):
            return MPParser.RULE_varDecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarDecl" ):
                return visitor.visitVarDecl(self)
            else:
                return visitor.visitChildren(self)




    def varDecl(self):

        localctx = MPParser.VarDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_varDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self.match(MPParser.VAR)
            self.state = 88 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 87
                self.listDecls()
                self.state = 90 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==MPParser.IDENTIFIER):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ListDeclsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.IDENTIFIER)
            else:
                return self.getToken(MPParser.IDENTIFIER, i)

        def COLON(self):
            return self.getToken(MPParser.COLON, 0)

        def types(self):
            return self.getTypedRuleContext(MPParser.TypesContext,0)


        def SEMI(self):
            return self.getToken(MPParser.SEMI, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.COMMA)
            else:
                return self.getToken(MPParser.COMMA, i)

        def getRuleIndex(self):
            return MPParser.RULE_listDecls

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitListDecls" ):
                return visitor.visitListDecls(self)
            else:
                return visitor.visitChildren(self)




    def listDecls(self):

        localctx = MPParser.ListDeclsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_listDecls)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.match(MPParser.IDENTIFIER)
            self.state = 97
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MPParser.COMMA:
                self.state = 93
                self.match(MPParser.COMMA)
                self.state = 94
                self.match(MPParser.IDENTIFIER)
                self.state = 99
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 100
            self.match(MPParser.COLON)
            self.state = 101
            self.types()
            self.state = 102
            self.match(MPParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FuncDeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(MPParser.FUNCTION, 0)

        def IDENTIFIER(self):
            return self.getToken(MPParser.IDENTIFIER, 0)

        def LB(self):
            return self.getToken(MPParser.LB, 0)

        def RB(self):
            return self.getToken(MPParser.RB, 0)

        def COLON(self):
            return self.getToken(MPParser.COLON, 0)

        def types(self):
            return self.getTypedRuleContext(MPParser.TypesContext,0)


        def SEMI(self):
            return self.getToken(MPParser.SEMI, 0)

        def compoundstmt(self):
            return self.getTypedRuleContext(MPParser.CompoundstmtContext,0)


        def listParams(self):
            return self.getTypedRuleContext(MPParser.ListParamsContext,0)


        def varDecl(self):
            return self.getTypedRuleContext(MPParser.VarDeclContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_funcDecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncDecl" ):
                return visitor.visitFuncDecl(self)
            else:
                return visitor.visitChildren(self)




    def funcDecl(self):

        localctx = MPParser.FuncDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_funcDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.match(MPParser.FUNCTION)
            self.state = 105
            self.match(MPParser.IDENTIFIER)
            self.state = 106
            self.match(MPParser.LB)
            self.state = 108
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.IDENTIFIER:
                self.state = 107
                self.listParams()


            self.state = 110
            self.match(MPParser.RB)
            self.state = 111
            self.match(MPParser.COLON)
            self.state = 112
            self.types()
            self.state = 113
            self.match(MPParser.SEMI)
            self.state = 115
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.VAR:
                self.state = 114
                self.varDecl()


            self.state = 117
            self.compoundstmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ListParamsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def params(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.ParamsContext)
            else:
                return self.getTypedRuleContext(MPParser.ParamsContext,i)


        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.SEMI)
            else:
                return self.getToken(MPParser.SEMI, i)

        def getRuleIndex(self):
            return MPParser.RULE_listParams

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitListParams" ):
                return visitor.visitListParams(self)
            else:
                return visitor.visitChildren(self)




    def listParams(self):

        localctx = MPParser.ListParamsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_listParams)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.params()
            self.state = 124
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MPParser.SEMI:
                self.state = 120
                self.match(MPParser.SEMI)
                self.state = 121
                self.params()
                self.state = 126
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParamsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.IDENTIFIER)
            else:
                return self.getToken(MPParser.IDENTIFIER, i)

        def COLON(self):
            return self.getToken(MPParser.COLON, 0)

        def types(self):
            return self.getTypedRuleContext(MPParser.TypesContext,0)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MPParser.COMMA)
            else:
                return self.getToken(MPParser.COMMA, i)

        def getRuleIndex(self):
            return MPParser.RULE_params

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParams" ):
                return visitor.visitParams(self)
            else:
                return visitor.visitChildren(self)




    def params(self):

        localctx = MPParser.ParamsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_params)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self.match(MPParser.IDENTIFIER)
            self.state = 132
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MPParser.COMMA:
                self.state = 128
                self.match(MPParser.COMMA)
                self.state = 129
                self.match(MPParser.IDENTIFIER)
                self.state = 134
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 135
            self.match(MPParser.COLON)
            self.state = 136
            self.types()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ProDeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROCEDURE(self):
            return self.getToken(MPParser.PROCEDURE, 0)

        def IDENTIFIER(self):
            return self.getToken(MPParser.IDENTIFIER, 0)

        def LB(self):
            return self.getToken(MPParser.LB, 0)

        def RB(self):
            return self.getToken(MPParser.RB, 0)

        def SEMI(self):
            return self.getToken(MPParser.SEMI, 0)

        def compoundstmt(self):
            return self.getTypedRuleContext(MPParser.CompoundstmtContext,0)


        def listParams(self):
            return self.getTypedRuleContext(MPParser.ListParamsContext,0)


        def varDecl(self):
            return self.getTypedRuleContext(MPParser.VarDeclContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_proDecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProDecl" ):
                return visitor.visitProDecl(self)
            else:
                return visitor.visitChildren(self)




    def proDecl(self):

        localctx = MPParser.ProDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_proDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            self.match(MPParser.PROCEDURE)
            self.state = 139
            self.match(MPParser.IDENTIFIER)
            self.state = 140
            self.match(MPParser.LB)
            self.state = 142
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.IDENTIFIER:
                self.state = 141
                self.listParams()


            self.state = 144
            self.match(MPParser.RB)
            self.state = 145
            self.match(MPParser.SEMI)
            self.state = 147
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.VAR:
                self.state = 146
                self.varDecl()


            self.state = 149
            self.compoundstmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class LiteralContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTLIT(self):
            return self.getToken(MPParser.INTLIT, 0)

        def REALIT(self):
            return self.getToken(MPParser.REALIT, 0)

        def BOOLIT(self):
            return self.getToken(MPParser.BOOLIT, 0)

        def STRLIT(self):
            return self.getToken(MPParser.STRLIT, 0)

        def getRuleIndex(self):
            return MPParser.RULE_literal

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLiteral" ):
                return visitor.visitLiteral(self)
            else:
                return visitor.visitChildren(self)




    def literal(self):

        localctx = MPParser.LiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_literal)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 151
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MPParser.INTLIT) | (1 << MPParser.REALIT) | (1 << MPParser.BOOLIT) | (1 << MPParser.STRLIT))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TypesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primtype(self):
            return self.getTypedRuleContext(MPParser.PrimtypeContext,0)


        def compoundtype(self):
            return self.getTypedRuleContext(MPParser.CompoundtypeContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_types

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypes" ):
                return visitor.visitTypes(self)
            else:
                return visitor.visitChildren(self)




    def types(self):

        localctx = MPParser.TypesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_types)
        try:
            self.state = 155
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MPParser.REAL, MPParser.BOOLEAN, MPParser.INTEGER, MPParser.STRING]:
                self.enterOuterAlt(localctx, 1)
                self.state = 153
                self.primtype()
                pass
            elif token in [MPParser.ARRAY]:
                self.enterOuterAlt(localctx, 2)
                self.state = 154
                self.compoundtype()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PrimtypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BOOLEAN(self):
            return self.getToken(MPParser.BOOLEAN, 0)

        def INTEGER(self):
            return self.getToken(MPParser.INTEGER, 0)

        def REAL(self):
            return self.getToken(MPParser.REAL, 0)

        def STRING(self):
            return self.getToken(MPParser.STRING, 0)

        def getRuleIndex(self):
            return MPParser.RULE_primtype

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrimtype" ):
                return visitor.visitPrimtype(self)
            else:
                return visitor.visitChildren(self)




    def primtype(self):

        localctx = MPParser.PrimtypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_primtype)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 157
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MPParser.REAL) | (1 << MPParser.BOOLEAN) | (1 << MPParser.INTEGER) | (1 << MPParser.STRING))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CompoundtypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def arrtype(self):
            return self.getTypedRuleContext(MPParser.ArrtypeContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_compoundtype

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCompoundtype" ):
                return visitor.visitCompoundtype(self)
            else:
                return visitor.visitChildren(self)




    def compoundtype(self):

        localctx = MPParser.CompoundtypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_compoundtype)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 159
            self.arrtype()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ArrtypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ARRAY(self):
            return self.getToken(MPParser.ARRAY, 0)

        def LSB(self):
            return self.getToken(MPParser.LSB, 0)

        def lower(self):
            return self.getTypedRuleContext(MPParser.LowerContext,0)


        def DDOT(self):
            return self.getToken(MPParser.DDOT, 0)

        def upper(self):
            return self.getTypedRuleContext(MPParser.UpperContext,0)


        def RSB(self):
            return self.getToken(MPParser.RSB, 0)

        def OF(self):
            return self.getToken(MPParser.OF, 0)

        def primtype(self):
            return self.getTypedRuleContext(MPParser.PrimtypeContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_arrtype

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArrtype" ):
                return visitor.visitArrtype(self)
            else:
                return visitor.visitChildren(self)




    def arrtype(self):

        localctx = MPParser.ArrtypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_arrtype)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 161
            self.match(MPParser.ARRAY)
            self.state = 162
            self.match(MPParser.LSB)
            self.state = 163
            self.lower()
            self.state = 164
            self.match(MPParser.DDOT)
            self.state = 165
            self.upper()
            self.state = 166
            self.match(MPParser.RSB)
            self.state = 167
            self.match(MPParser.OF)
            self.state = 168
            self.primtype()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class LowerContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTLIT(self):
            return self.getToken(MPParser.INTLIT, 0)

        def SUB(self):
            return self.getToken(MPParser.SUB, 0)

        def getRuleIndex(self):
            return MPParser.RULE_lower

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLower" ):
                return visitor.visitLower(self)
            else:
                return visitor.visitChildren(self)




    def lower(self):

        localctx = MPParser.LowerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_lower)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 171
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MPParser.SUB:
                self.state = 170
                self.match(MPParser.SUB)

